--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random quote generator</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="quote-container" id="container">
+    <!--Quote-->
+    <div class="quote-text">
+      <i class="fas fa-quote-left"></i>
+      <span id="quote">
+        What you are is what you have been.What you'll be is what you do now.
+      </span>
+    </div>
+    <!--AUTHOR-->
+    <div class="quote-author">
+      <span id="author">Buddha</span>
+    </div>
+        <!--Button-->
+    <div class="btn-container">
+<button class="twitter-button" id="twitter" title="Tweet this!">
+    <i class="fab fa-twitter"></i>
+</button>
+<button id="new-quote">New Quote</button>
+    </div>
+</div>
+    <!--Script-->
     <script src="app.js"></script>
   </body>
 </html>
