--- a/index.html
+++ b/index.html
@@ -13,25 +13,23 @@
   </head>
   <body>
     <div class="quote-container" id="container">
-    <!--Quote-->
-    <div class="quote-text">
-      <i class="fas fa-quote-left"></i>
-      <span id="quote">
-        What you are is what you have been.What you'll be is what you do now.
-      </span>
+      <!--Quote-->
+      <div class="quote-text">
+        <i class="fas fa-quote-left"></i>
+        <span id="quote"> </span>
+      </div>
+      <!--AUTHOR-->
+      <div class="quote-author">
+        <span id="author"></span>
+      </div>
+      <!--Button-->
+      <div class="btn-container">
+        <button class="twitter-button" id="twitter" title="Tweet this!">
+          <i class="fab fa-twitter"></i>
+        </button>
+        <button id="new-quote">New Quote</button>
+      </div>
     </div>
-    <!--AUTHOR-->
-    <div class="quote-author">
-      <span id="author">Buddha</span>
-    </div>
-        <!--Button-->
-    <div class="btn-container">
-<button class="twitter-button" id="twitter" title="Tweet this!">
-    <i class="fab fa-twitter"></i>
-</button>
-<button id="new-quote">New Quote</button>
-    </div>
-</div>
     <!--Script-->
     <script src="app.js"></script>
   </body>
