--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <button id="new-quote">New Quote</button>
       </div>
     </div>
+    <!--CSS LOADER-->
+    <div class="loader" id="loader">
+      
+    </div>
     <!--Script-->
     <script src="app.js"></script>
   </body>
